# raspberry-pi-pico

./: .gitignore  Makefile  main.py  poetry.toml  pyproject.toml  setup.json
config/: setup.json
firmware/: main.py
firmware/src/: config.py  networking.py
raspberry-pi-pico/: config.py  networking.py  util.py
scripts/: build_mpy_files.py  logging.py  microdot.py
